@@ -984,7 +984,31 @@ private:
 };
 
 
-// synth engine implementation
+// micro-tuning/instance implementation
+
+class drumkv1_tun : public drumkv1_sched
+{
+public:
+
+	// ctor.
+	drumkv1_tun(drumkv1 *pDrumk) : drumkv1_sched(pDrumk, Tuning),
+		refPitch(440.0f), refNote(69), enabled0(false) {}
+
+	// processor.
+	void process(int) { instance()->updateTuning(); }
+
+	drumkv1_port enabled;
+
+	float   refPitch;
+	int     refNote;
+	QString scaleFile;
+	QString keyMapFile;
+
+	bool    enabled0;
+};
+
+
+// drum-kit sampler implementation
 
 class drumkv1_impl
 {
@@ -1041,6 +1065,18 @@ public:
 
 	drumkv1_controls *controls();
 	drumkv1_programs *programs();
+
+	void setTuningRefPitch(float refPitch);
+	float tuningRefPitch() const;
+
+	void setTuningRefNote(int refNote);
+	int tuningRefNote() const;
+
+	void setTuningScaleFile(const char *pszScaleFile);
+	const char *tuningScaleFile() const;
+
+	void setTuningKeyMapFile(const char *pszKeyMapFile);
+	const char *tuningKeyMapFile() const;
 
 	void updateTuning();
 
@@ -1113,6 +1149,7 @@ private:
 	drumkv1_controls m_controls;
 	drumkv1_programs m_programs;
 	drumkv1_midi_in  m_midi_in;
+	drumkv1_tun      m_tun;
 
 	uint16_t m_nchannels;
 	float    m_srate;
@@ -1179,7 +1216,7 @@ private:
 drumkv1_impl::drumkv1_impl (
 	drumkv1 *pDrumk, uint16_t nchannels, float srate )
 		: m_pDrumk(pDrumk),	m_controls(pDrumk), m_programs(pDrumk),
-			m_midi_in(pDrumk), m_bpm(180.0f), m_running(false)
+			m_midi_in(pDrumk), m_tun(pDrumk), m_bpm(180.0f), m_running(false)
 {
 	// allocate voice pool.
 	m_voices = new drumkv1_voice * [MAX_VOICES];
@@ -1646,6 +1683,7 @@ drumkv1_port *drumkv1_impl::paramPort ( drumkv1::ParamIndex index )
 	case drumkv1::REV1_WIDTH:     pParamPort = &m_rev.width;     break;
 	case drumkv1::DYN1_COMPRESS:  pParamPort = &m_dyn.compress;  break;
 	case drumkv1::DYN1_LIMITER:   pParamPort = &m_dyn.limiter;   break;
+	case drumkv1::TUN1_ENABLED:   pParamPort = &m_tun.enabled;   break;
 	default:
 		if (m_elem) pParamPort = m_elem->element.paramPort(index);
 		break;
@@ -1995,11 +2033,69 @@ drumkv1_programs *drumkv1_impl::programs (void)
 
 
 // Micro-tuning support
+
+void drumkv1_impl::setTuningRefPitch ( float refPitch )
+{
+	m_tun.refPitch = refPitch;
+}
+
+float drumkv1_impl::tuningRefPitch (void) const
+{
+	return m_tun.refPitch;
+}
+
+void drumkv1_impl::setTuningRefNote ( int refNote )
+{
+	m_tun.refNote = refNote;
+}
+
+int drumkv1_impl::tuningRefNote (void) const
+{
+	return m_tun.refNote;
+}
+
+
+void drumkv1_impl::setTuningScaleFile ( const char *pszScaleFile )
+{
+	m_tun.scaleFile = QString::fromUtf8(pszScaleFile);
+}
+
+const char *drumkv1_impl::tuningScaleFile (void) const
+{
+	return m_tun.scaleFile.toUtf8().constData();
+}
+
+
+void drumkv1_impl::setTuningKeyMapFile ( const char *pszKeyMapFile )
+{
+	m_tun.keyMapFile = QString::fromUtf8(pszKeyMapFile);
+}
+
+const char *drumkv1_impl::tuningKeyMapFile (void) const
+{
+	return m_tun.keyMapFile.toUtf8().constData();
+}
+
+
 void drumkv1_impl::updateTuning (void)
 {
-
+	if (m_tun.enabled0) {
+		// Instance micro-tuning, possibly from Scala keymap and scale files...
+		drumkv1_tuning tuning(
+			m_tun.refPitch,
+			m_tun.refNote);
+		if (m_tun.keyMapFile.isEmpty())
+		if (!m_tun.keyMapFile.isEmpty())
+			tuning.loadKeyMapFile(m_tun.keyMapFile);
+		if (!m_tun.scaleFile.isEmpty())
+			tuning.loadScaleFile(m_tun.scaleFile);
+		for (int note = 0; note < MAX_NOTES; ++note)
+			m_freqs[note] = tuning.noteToPitch(note);
+		// Done instance tuning.
+	}
+	else
 	if (m_config.bTuningEnabled) {
-		// Custom micro-tuning, possibly from Scala keymap and scale files...
+		// Global/config micro-tuning, possibly from Scala keymap and scale files...
 		drumkv1_tuning tuning(
 			m_config.fTuningRefPitch,
 			m_config.iTuningRefNote);
@@ -2009,12 +2105,12 @@ void drumkv1_impl::updateTuning (void)
 			tuning.loadScaleFile(m_config.sTuningScaleFile);
 		for (int note = 0; note < MAX_NOTES; ++note)
 			m_freqs[note] = tuning.noteToPitch(note);
-		// Done custom tuning.
+		// Done global/config tuning.
 	} else {
-		// Native tuning, 12-tone equal temperament western standard...
+		// Native/default tuning, 12-tone equal temperament western standard...
 		for (int note = 0; note < MAX_NOTES; ++note)
 			m_freqs[note] = drumkv1_freq(note);
-		// Done native tuning.
+		// Done native/default tuning.
 	}
 }
 
@@ -2127,6 +2223,11 @@ void drumkv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 				drumkv1_wave::Shape(*elem->lfo1.shape), *elem->lfo1.width);
 		}
 		elem = elem->next();
+	}
+
+	if (m_tun.enabled0 != *m_tun.enabled) {
+		m_tun.enabled0  = *m_tun.enabled;
+		m_tun.schedule();
 	}
 
 	// per voice
@@ -2965,6 +3066,49 @@ void drumkv1::directNoteOn ( int note, int vel )
 
 
 // Micro-tuning support
+void drumkv1::setTuningRefPitch ( float refPitch )
+{
+	m_pImpl->setTuningRefPitch(refPitch);
+}
+
+float drumkv1::tuningRefPitch (void) const
+{
+	return m_pImpl->tuningRefPitch();
+}
+
+void drumkv1::setTuningRefNote ( int refNote )
+{
+	m_pImpl->setTuningRefNote(refNote);
+}
+
+int drumkv1::tuningRefNote (void) const
+{
+	return m_pImpl->tuningRefNote();
+}
+
+
+void drumkv1::setTuningScaleFile ( const char *pszScaleFile )
+{
+	m_pImpl->setTuningScaleFile(pszScaleFile);
+}
+
+const char *drumkv1::tuningScaleFile (void) const
+{
+	return m_pImpl->tuningScaleFile();
+}
+
+
+void drumkv1::setTuningKeyMapFile ( const char *pszKeyMapFile )
+{
+	m_pImpl->setTuningKeyMapFile(pszKeyMapFile);
+}
+
+const char *drumkv1::tuningKeyMapFile (void) const
+{
+	return m_pImpl->tuningKeyMapFile();
+}
+
+
 void drumkv1::updateTuning (void)
 {
 	m_pImpl->updateTuning();
