@@ -108,10 +108,16 @@ private:
 		LV2_URID p103_offset_end;
 		LV2_URID gen1_select;
 		LV2_URID gen1_update;
+		LV2_URID t101_ref_pitch;
+		LV2_URID t102_ref_note;
+		LV2_URID t103_scale_file;
+		LV2_URID t104_keymap_file;
+		LV2_URID tun1_update;
 		LV2_URID atom_Blank;
 		LV2_URID atom_Object;
 		LV2_URID atom_Float;
 		LV2_URID atom_Int;
+		LV2_URID atom_Bool;
 		LV2_URID atom_Path;
 		LV2_URID time_Position;
 		LV2_URID time_beatsPerMinute;
