@@ -37,7 +37,7 @@ class drumkv1_sched
 public:
 
 	// plausible sched types.
-	enum Type { Sample, Programs, Controls, Controller, MidiIn };
+	enum Type { Sample, Programs, Controls, Controller, MidiIn, Tuning };
 
 	// ctor.
 	drumkv1_sched(drumkv1 *pDrumk, Type stype, uint32_t nsize = 8);
